# RD-Platform

./: .gitignore  CHANGELOG.md  INSTALL.md  RAG_TECHNICAL_GUIDE.md  README.md  docker-compose.yml  download_manuals.py  findings.md  progress.md  task_plan.md  ui-ux-requirements.md
backend/: Dockerfile  R&D PLATFORM_rag.db  debug_db.py  download_models.py  pyproject.toml  test_e2e_validation.py
backend/data/: mock_bom.csv
backend/scratch/: ingest_graphcast.py
backend/src/backend/: bom_engine.py  chunker.py  code_parser.py  database.py  ifc_parser.py  ingest.py  llm_client.py  main.py  orchestrator.py  pdf_extractor.py  vector_db.py
backend/src/backend/prompts/: rag_prompts.py
backend/tests/: test_api_integration.py  test_bom_engine.py  test_chunker.py  test_code_parser.py  test_db_deletion.py  test_debate_orchestration.py  test_e2e.py  test_graphcast_rag.py  test_hybrid_search.py  test_i18n_api.py  test_llm_connection.py  test_orchestrator.py  test_pdf_extractor.py  test_rag_retrieval.py  test_real_ifc.py  test_secure_clone.py  test_structured_ingestion.py  test_vector_db.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  translations.test.ts  translations.ts
