[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "gitpython>=3.1.47",
    "httpx>=0.28.1",
    "ifcopenshell>=0.8.5",
    "langchain-core>=1.3.1",
    "langgraph>=1.1.9",
    "playwright>=1.58.0",
    "polars>=1.40.1",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "sqlite-vec>=0.1.9",
    "uvicorn>=0.46.0",
]
